@@ -63,8 +63,6 @@ int main(void)
 
 	for (;;)
 	{
-		ProcessNextSample();
-
 		Audio_Device_USBTask(&Speaker_Audio_Interface);
 		USB_USBTask();
 	}
@@ -85,35 +83,31 @@ void SetupHardware(void)
 	USB_Init();
 }
 
-/** Processes the next audio sample by reading the last ADC conversion and writing it to the audio
- *  interface, each time the sample reload timer period elapses to give a constant sample rate.
- */
-void ProcessNextSample(void)
+/** ISR to handle the reloading of the PWM timer with the next sample. */
+ISR(TIMER0_COMPA_vect, ISR_BLOCK)
 {
-	/* Check if the sample reload timer period has elapsed, and that the USB bus is ready for a new sample */
-	if ((TIFR0 & (1 << OCF0A)) && Audio_Device_IsSampleReceived(&Speaker_Audio_Interface))
-	{
-		/* Clear the sample reload timer compare flag, ready for the next interval */
-		TIFR0 |= (1 << OCF0A);
+	uint8_t PrevEndpoint = Endpoint_GetCurrentEndpoint();
 
+	if (Audio_Device_IsSampleReceived(&Speaker_Audio_Interface))
+	{
 		/* Retrieve the signed 16-bit left and right audio samples, convert to 8-bit */
-		int8_t  LeftSample_8Bit   = (Audio_Device_ReadSample16(&Speaker_Audio_Interface) >> 8);
-		int8_t  RightSample_8Bit  = (Audio_Device_ReadSample16(&Speaker_Audio_Interface) >> 8);
+		int8_t LeftSample_8Bit  = (Audio_Device_ReadSample16(&Speaker_Audio_Interface) >> 8);
+		int8_t RightSample_8Bit = (Audio_Device_ReadSample16(&Speaker_Audio_Interface) >> 8);
 
 		/* Mix the two channels together to produce a mono, 8-bit sample */
-		int8_t  MixedSample_8Bit  = (((int16_t)LeftSample_8Bit + (int16_t)RightSample_8Bit) >> 1);
+		int8_t MixedSample_8Bit = (((int16_t)LeftSample_8Bit + (int16_t)RightSample_8Bit) >> 1);
 
-#if defined(AUDIO_OUT_MONO)
+		#if defined(AUDIO_OUT_MONO)
 		/* Load the sample into the PWM timer channel */
 		OCR3A = (MixedSample_8Bit ^ (1 << 7));
-#elif defined(AUDIO_OUT_STEREO)
+		#elif defined(AUDIO_OUT_STEREO)
 		/* Load the dual 8-bit samples into the PWM timer channels */
 		OCR3A = (LeftSample_8Bit  ^ (1 << 7));
 		OCR3B = (RightSample_8Bit ^ (1 << 7));
-#elif defined(AUDIO_OUT_PORTC)
+		#elif defined(AUDIO_OUT_PORTC)
 		/* Load the 8-bit mixed sample into PORTC */
 		PORTC = MixedSample_8Bit;
-#endif
+		#endif
 
 		uint8_t LEDMask = LEDS_NO_LEDS;
 
@@ -129,6 +123,8 @@ void ProcessNextSample(void)
 
 		LEDs_SetAllLEDs(LEDMask);
 	}
+	
+	Endpoint_SelectEndpoint(PrevEndpoint);	
 }
 
 /** Event handler for the library USB Connection event. */
@@ -137,27 +133,28 @@ void EVENT_USB_Device_Connect(void)
 	LEDs_SetAllLEDs(LEDMASK_USB_ENUMERATING);
 
 	/* Sample reload timer initialization */
+	TIMSK0  = (1 << OCIE0A);
 	OCR0A   = (F_CPU / 8 / AUDIO_SAMPLE_FREQUENCY) - 1;
 	TCCR0A  = (1 << WGM01);  // CTC mode
 	TCCR0B  = (1 << CS01);   // Fcpu/8 speed
 
-#if defined(AUDIO_OUT_MONO)
+	#if defined(AUDIO_OUT_MONO)
 	/* Set speaker as output */
 	DDRC   |= (1 << 6);
-#elif defined(AUDIO_OUT_STEREO)
+	#elif defined(AUDIO_OUT_STEREO)
 	/* Set speakers as outputs */
 	DDRC   |= ((1 << 6) | (1 << 5));
-#elif defined(AUDIO_OUT_PORTC)
+	#elif defined(AUDIO_OUT_PORTC)
 	/* Set PORTC as outputs */
 	DDRC   |= 0xFF;
-#endif
+	#endif
 
-#if (defined(AUDIO_OUT_MONO) || defined(AUDIO_OUT_STEREO))
+	#if (defined(AUDIO_OUT_MONO) || defined(AUDIO_OUT_STEREO))
 	/* PWM speaker timer initialization */
 	TCCR3A  = ((1 << WGM30) | (1 << COM3A1) | (1 << COM3A0)
 	        | (1 << COM3B1) | (1 << COM3B0)); // Set on match, clear on TOP
 	TCCR3B  = ((1 << WGM32) | (1 << CS30));  // Fast 8-Bit PWM, F_CPU speed
-#endif
+	#endif
 }
 
 /** Event handler for the library USB Disconnection event. */
@@ -168,21 +165,21 @@ void EVENT_USB_Device_Disconnect(void)
 	/* Stop the sample reload timer */
 	TCCR0B = 0;
 
-#if (defined(AUDIO_OUT_MONO) || defined(AUDIO_OUT_STEREO))
+	#if (defined(AUDIO_OUT_MONO) || defined(AUDIO_OUT_STEREO))
 	/* Stop the PWM generation timer */
 	TCCR3B = 0;
-#endif
+	#endif
 
-#if defined(AUDIO_OUT_MONO)
+	#if defined(AUDIO_OUT_MONO)
 	/* Set speaker as input to reduce current draw */
-	DDRC   &= ~(1 << 6);
-#elif defined(AUDIO_OUT_STEREO)
+	DDRC  &= ~(1 << 6);
+	#elif defined(AUDIO_OUT_STEREO)
 	/* Set speakers as inputs to reduce current draw */
-	DDRC   &= ~((1 << 6) | (1 << 5));
-#elif defined(AUDIO_OUT_PORTC)
+	DDRC  &= ~((1 << 6) | (1 << 5));
+	#elif defined(AUDIO_OUT_PORTC)
 	/* Set PORTC low */
-	PORTC  = 0x00;
-#endif
+	PORTC = 0x00;
+	#endif
 }
 
 /** Event handler for the library USB Configuration Changed event. */
