@@ -63,7 +63,6 @@
 
 	/* Function Prototypes: */
 		void SetupHardware(void);
-		void USB_Audio_Task(void);
 
 		void EVENT_USB_Device_Connect(void);
 		void EVENT_USB_Device_Disconnect(void);
